trunk/salesforce.com-societies-oss/src/objects/SocietyVote__c.object
<CustomObject>
    <description>Societies Discussion Board</description>
    <fields>
        <fullName>SocietyComment__c</fullName>
        <label>Society Comment</label>
        <referenceTo>SocietyComment__c</referenceTo>
        <relationshipLabel>Society Votes</relationshipLabel>
        <relationshipName>SocietyVotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Society__c</fullName>
        <label>Society</label>
        <referenceTo>Society__c</referenceTo>
        <relationshipLabel>Society Votes</relationshipLabel>
        <relationshipName>Society_Votes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Liked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disliked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Society Vote</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Society Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>